--- a/templates/rubro.html
+++ b/templates/rubro.html
@@ -26,12 +26,35 @@
                     <h5> {{producto.codigoNombre}} {{producto.lecheparve}}</h5>
                 </div>
                 <div class="pull-right">
-                    <button type="button" class="btn btn-primary">Editar</button>
+                    <button type="button" class="btn btn-primary" 
+                        ng-click="editProductoDialog(producto)">Editar</button>
                     <button type="button" class="btn btn-danger"
                         ng-click="showConfirmDeleteProducto(ev, producto)">Eliminar</button>
                 </div>
             </div>
             <hr>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="basicExampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
         </div>
     </div>
 </div>
